[package]
name = "b64ed"
version = "0.1.0"
authors = ["zaakirio"]
license = "MIT OR Apache-2.0"
description = "CLI Tool to base64 encode/decode"
readme = "README.md"
homepage = "https://github.com/zaakirio/b64ed/"
repository = "https://github.com/zaakirio/b64ed/"
keywords = ["cli", "base64", "encode","decode","b64"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.0", features = ["derive"] }
